--- a/vuvu/index.html
+++ b/vuvu/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
